@@ -17,6 +17,7 @@ Version 1.11.0-svn:
    * Reject add-ons with names or titles that begin with a WML text format
      markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)
  * AI:
+   * New AI formula 'aki_eval' for testing a battle evaluation
    * AI now properly considers the expected damage from poison when attacking using poisoners.
    * Adding a new scenario for the ai-arena-small in order to test the new AI.
    * Adding new files for the new AI (ai/akihara/recruitment.?pp)
